# ShadeLink

./: AGENTS.md  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yaml  package-lock.json  package.json  vitest.config.ts
contracts/permission/: Cargo.toml
contracts/permission/src/: lib.rs  signature.rs  types.rs
contracts/permission/tests/: integration.rs
frontend/src/: App.jsx
frontend/styles/: globals.css
scripts/: build-contract.sh  deploy-contract.sh
src/: config.ts  constants.ts  index.integration.test.ts  index.ts  openapi.ts
src/flows/: burrowDeposit.test.ts  burrowDeposit.ts  burrowWithdraw.test.ts  burrowWithdraw.ts  context.ts  index.ts  kaminoDeposit.test.ts  kaminoDeposit.ts  kaminoWithdraw.test.ts  kaminoWithdraw.ts  metrics.test.ts  metrics.ts  nearSwap.test.ts  nearSwap.ts  orderCancel.ts  orderCreate.ts  orderExecute.ts  registry.ts  solSwap.live.test.ts  solSwap.test.ts  solSwap.ts  types.ts
src/mcp/: index.ts  server.ts
src/permission/: client.test.ts  client.ts  index.ts  permission.integration.test.ts  types.ts
src/queue/: consumer.test.ts  consumer.ts  intentsPoller.ts  orderPoller.ts  redis.ts  types.ts  validation.test.ts  validation.ts
src/routes/: agentAccount.test.ts  burrowPositions.ts  chainsigTest.test.ts  chainsigTest.ts  ethAccount.test.ts  ethAccount.ts  intents.test.ts  intents.ts  kaminoPositions.ts  orders.ts  permission.ts  solAccount.ts  status.test.ts  status.ts  transaction.test.ts
src/shims/: cosmjs-signing.ts  cosmjs-tx.ts
src/state/: orders.ts  status.ts
src/utils/: authorization.ts  (+18 more)
