[package]
name = "permission-contract"
version = "0.1.0"
edition = "2021"
authors = ["Shade Agent"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.5", features = ["legacy", "unstable"] }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
near-sdk = { version = "5.5", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
